--- a/app/assets/styles/tailwind.css
+++ b/app/assets/styles/tailwind.css
@@ -3,66 +3,46 @@
 @tailwind utilities;
 
 @layer base {
-  :root {
-    --background: 247 85% 61%;
-    --foreground: 0 0% 100%;
-
-    --card: 0 0% 100%;
-    --card-foreground: 222.2 84% 4.9%;
-
-    --popover: 0 0% 100%;
-    --popover-foreground: 222.2 84% 4.9%;
-
-    --primary: 247 85% 61%;
-    --primary-foreground: 210 40% 98%;
-
-    --secondary: 42 100% 46%;
-    --secondary-foreground: 222.2 47.4% 11.2%;
-
-    --muted: 210 40% 96.1%;
-    --muted-foreground: 215.4 16.3% 46.9%;
-
-    --accent: 210 40% 96.1%;
-    --accent-foreground: 222.2 47.4% 11.2%;
-
-    --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 210 40% 98%;
-
-    --border: 214.3 31.8% 91.4%;
-    --input: 214.3 31.8% 91.4%;
-    --ring: 222.2 84% 4.9%;
-
-    --radius: 0.5rem;
+  @font-face {
+    font-family: 'Cooper Hewitt';
+    font-style: normal;
+    font-weight: 300;
+    font-display: swap;
+    src: url(/fonts/cooper-hewitt/CooperHewitt-Light.woff2) format('woff2');
+  }
+  @font-face {
+    font-family: 'Cooper Hewitt';
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: url(/fonts/cooper-hewitt/CooperHewitt-Medium.woff2) format('woff2');
+  }
+  @font-face {
+    font-family: 'Cooper Hewitt';
+    font-style: normal;
+    font-weight: 700;
+    font-display: swap;
+    src: url(/fonts/cooper-hewitt/CooperHewitt-Bold.woff2) format('woff2');
+  }
+  @font-face {
+    font-family: 'Reglo';
+    font-style: normal;
+    font-weight: 700;
+    font-display: swap;
+    src: url(/fonts/reglo/Reglo-Bold.woff2) format('woff2');
   }
 
-  .dark {
-    --background: 222.2 84% 4.9%;
-    --foreground: 210 40% 98%;
+  :root {
+    --background: 247 85% 61%;
+    --foreground: 166 16% 26%;
+    --primary: 247 85% 61%;
+    --secondary: 42 100% 46%;
 
-    --card: 222.2 84% 4.9%;
-    --card-foreground: 210 40% 98%;
+    --border: 214.3 31.8% 91.4%;
+    --ring: 222.2 84% 4.9%;
 
-    --popover: 222.2 84% 4.9%;
-    --popover-foreground: 210 40% 98%;
-
-    --primary: 210 40% 98%;
-    --primary-foreground: 222.2 47.4% 11.2%;
-
-    --secondary: 217.2 32.6% 17.5%;
-    --secondary-foreground: 210 40% 98%;
-
-    --muted: 217.2 32.6% 17.5%;
-    --muted-foreground: 215 20.2% 65.1%;
-
-    --accent: 217.2 32.6% 17.5%;
-    --accent-foreground: 210 40% 98%;
-
-    --destructive: 0 62.8% 30.6%;
-    --destructive-foreground: 210 40% 98%;
-
-    --border: 217.2 32.6% 17.5%;
-    --input: 217.2 32.6% 17.5%;
-    --ring: 212.7 26.8% 83.9%;
+    --font-cooper: 'Cooper Hewitt';
+    --font-reglo: 'Reglo';
   }
 }
 
@@ -71,6 +51,7 @@
     @apply border-border;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply flex flex-col;
+    @apply bg-background text-white font-medium overflow-x-hidden min-h-screen;
   }
 }
