--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -37,6 +37,7 @@
     --foreground: 166 16% 26%;
     --primary: 247 85% 61%;
     --secondary: 42 100% 46%;
+    --white: 0 0% 100%;
 
     --font-cooper: 'Cooper Hewitt';
     --font-reglo: 'Reglo';
